# algorithms-c

./: .gitignore  .roomodes  CMakeLists.txt  README.md
examples/: linked_list_example.c
include/: data_structures.h  linked_list.h
src/data_structures/: linked_list.c
tests/: test_linked_list.c
